# mlops

./: .gitignore  README.md  pyproject.toml
src/deploy/: client.py  serve.py
src/experiments/: experiment_1.py  hyperparams_opt.py  train_app.py  vit.py
src/experiments/conf/: config.yaml
src/experiments/conf/dataset/: CIFAR10.yaml  MNIST.yaml
src/experiments/conf/model/: DenseNetBC_L190_k40.yaml  DenseNetBC_L250_k24.yaml  ResNet18.yaml  ResNet34.yaml  SimpleCNN.yaml  densenet.yaml  resnet18.yaml  standard_DenseNet.yaml  standard_ViT.yaml  vit.yaml
src/experiments/conf/training_hp/: standard.yaml
src/mlops/: __init__.py  client.py  dist.py  greet.py  serve.py  steps.py  test.py  test2.py  train.py  utils.py
src/mlops/models/: cnn.py
src/models/: __init__.py  _basic_cnn_block.py  capsnet.py  cnn.py  convnext.py  cvt.py  densenet.py  flow.py  mlp_mixer.py  resnet.py  simplecnn.py  visiontransformer.py
src/train/: __init__.py  loops.py  steps.py  train.py
src/train/experiments/: experiment_1.py
src/utils/: config.py  confmodel.py  dataloader.py  dist.py  networks.py  plot.py  stats.py  utils.py
