[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dylan Dronnier", email = "dylan.dronnier@posteo.net" }
]
dependencies = [
    "datasets>=2.17.1",
    "flax>=0.8.1",
    "jax>=0.4.25",
    "optax>=0.1.9",
    "optuna>=3.5.0",
    "mlflow>=2.10.2",
    "matplotlib>=3.8.3",
    "tornado>=6.4",
    "psutil>=5.9.8",
    "gradio>=4.19.2",
    "optuna-integration[mlflow]>=3.6.0",
    "clu>=0.0.11",
    "tyro>=0.8.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlops"]
