[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dylan Dronnier", email = "dylan.dronnier@posteo.net" }
]
dependencies = [
    "datasets>=2.17.1",
    "flax>=0.8.1",
    "jax>=0.4.25",
    "optax>=0.1.9",
    "optuna>=3.5.0",
    "mlflow>=2.10.2",
    "matplotlib>=3.8.3",
    "tornado>=6.4",
    "psutil>=5.9.8",
    "gradio>=4.19.2",
    "optuna-integration>=3.6.0",
    "tyro>=0.8.4",
    "hydra-core>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hyper = 'experiments.hyperparams_opt:main'
vit = 'experiments.vit:main'

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.4.31",
    "pynvml>=11.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mlops"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "flagged",
    "mlruns",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = [
    "I",
    "D",
    "E",    # pycodestyle errors.
    "F",    # Pyflakes rules.
    "PLC",  # Pylint convention.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
]

ignore = ["D213", "D211", "D407"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
